--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -2,7 +2,7 @@
   position: absolute;
   right: 48px;
   top: 50%;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-size: 36px;
   line-height: 51px;
