--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -2,7 +2,7 @@
   width: 648px;
   text-align: center;
   margin: 0 auto 70px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 120px;
