--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-size: 18px;
   line-height: 18px;
