--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,6 +1,6 @@
 .header__title {
   width: 730px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 102px;
