--- a/blocks/khan/__author/khan__author.css
+++ b/blocks/khan/__author/khan__author.css
@@ -1,5 +1,5 @@
 .khan__author {
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-size: 30px;
   line-height: 42px;
