--- a/blocks/khan/__title/khan__title.css
+++ b/blocks/khan/__title/khan__title.css
@@ -1,5 +1,5 @@
 .khan__title {
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-weight: 600;
   font-size: 60px;
   line-height: 115%;
