--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,6 +1,6 @@
 .section-title {
   width: 60%;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 60px;
