--- a/blocks/two-columns/__main-text/two-columns__main-text.css
+++ b/blocks/two-columns/__main-text/two-columns__main-text.css
@@ -1,7 +1,7 @@
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
