--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -8,4 +8,10 @@
   line-height: 51px;
   text-decoration: none;
   color: #2f80ed;
+  opacity: 1;
+  transition: opacity .5s ease;
+}
+
+.feynman__link:hover {
+  opacity: 0.6;
 }
