--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -7,6 +7,13 @@
   font-size: 18px;
   line-height: 18px;
   color: #ffffff;
+  text-decoration: none;
+  opacity: 1;
+  transition: opacity .5s ease;
+}
+
+.footer__column-link:hover {
+  opacity: 0.6;
 }
 
 .footer__column-link:last-of-type {
