--- a/blocks/footer/__column/footer__column.css
+++ b/blocks/footer/__column/footer__column.css
@@ -1,6 +1,5 @@
-.footer__column_content_copyright {
+.footer__column.css {
   display: flex;
-  flex-basis: 711px;
   flex-direction: column;
   justify-content: space-between;
 }
