--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,4 +5,10 @@
   text-decoration: none;
   margin: 68px 0 0;
   color: #2f80ed;
+  opacity: 1;
+  transition: opacity .5s ease;
+}
+
+.khan__buy-link:hover {
+  opacity: 0.6;
 }
