--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,11 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/page/__section/page__section.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/logo/__place/_header/logo__place_header.css);
+@import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/_place_header/logo_place_header.css);
 @import url(../blocks/header/__title/header__title.css);
 @import url(../blocks/header/__subtitle/header__subtitle.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -50,10 +52,7 @@
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 @import url(../blocks/resources/resources.css);
 @import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
-@import url(../blocks/resources/__logo-zone/_logo_arzamas/resources__logo-zone_logo_arzamas.css);
-@import url(../blocks/resources/__logo-zone/_logo_strelka/resources__logo-zone_logo_strelka.css);
-@import url(../blocks/resources/__logo-zone/_logo_polka/resources__logo-zone_logo_polka.css);
-@import url(../blocks/resources/__logo-zone/_logo_n1/esources__logo-zone_logo_n1.css);
+@import url(../blocks/resources/__link/resources__link.css);
 @import url(../blocks/section-title/_theme_dark/section-title_theme_dark.css);
 @import url(../blocks/section-subtitle/_theme_dark/section-subtitle_theme_dark.css);
 @import url(../blocks/table/_theme_dark/table_theme_dark.css);
@@ -62,10 +61,11 @@
 @import url(../blocks/table/__cell/_theme_dark/table__cell_theme_dark.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__columns/footer__columns.css);
+@import url(../blocks/footer/__column/footer__column.css);
 @import url(../blocks/footer/__column/_content_copyright/footer__column_content_copyright.css);
 @import url(../blocks/footer/__column-heading/footer__column-heading.css);
 @import url(../blocks/footer/__author/footer__author.css);
 @import url(../blocks/footer/__column-links/footer__column-links.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
 @import url(../blocks/footer/__column-link/footer__column-link.css);
-@import url(../blocks/logo/__place/_footer/logo__place_footer.css);
+@import url(../blocks/logo/_place_footer/logo_place_footer.css);
